# ICP_Robots

./: .gitignore  CMakeLists.txt  DtoMap.h  Makefile  README.md  Serializable.h  block.cpp  block.h  blockcomposer.cpp  blockcomposer.h  blockdto.cpp  blockdto.h  gameentity.cpp  gameentity.h  graphicsitemcomposer.h  jsonfileaccessor.cpp  jsonfileaccessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pausableentity.cpp  pausableentity.h  propertyview.cpp  propertyview.h  resizablegraphicsview.cpp  resizablegraphicsview.h  robot.cpp  robot.h  robotcomposer.cpp  robotcomposer.h  robotdto.cpp  robotdto.h  room.cpp  room.h  roomdto.cpp  roomdto.h  scene.cpp  scene.h  signalsender.cpp  (+4 more)
docs/html/: DtoMap_8h.html  DtoMap_8h__dep__incl.dot  DtoMap_8h_source.html  Serializable_8h.html  Serializable_8h__dep__incl.dot  Serializable_8h__incl.dot  Serializable_8h_source.html  annotated.html  block_8cpp.html  block_8cpp__incl.dot  block_8h.html  block_8h__dep__incl.dot  block_8h__incl.dot  block_8h_source.html  blockcomposer_8cpp.html  blockcomposer_8cpp__incl.dot  blockcomposer_8h.html  blockcomposer_8h__dep__incl.dot  blockcomposer_8h__incl.dot  blockcomposer_8h_source.html  blockdto_8cpp.html  blockdto_8cpp__incl.dot  blockdto_8h.html  blockdto_8h__dep__incl.dot  blockdto_8h__incl.dot  blockdto_8h_source.html  classBlock-members.html  classBlock.html  classBlockComposer-members.html  classBlockComposer.html  classBlockComposer__inherit__graph.dot  classBlockDto-members.html  classBlockDto.html  classBlockDto__inherit__graph.dot  classBlock__inherit__graph.dot  classDtoMap-members.html  classDtoMap.html  classGameEntity-members.html  classGameEntity.html  classGameEntity__coll__graph.dot  (+152 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+8 more)
docs/latex/: DtoMap_8h.tex  DtoMap_8h.tex.tmp  DtoMap_8h__dep__incl.dot  Serializable_8h.tex  Serializable_8h__dep__incl.dot  Serializable_8h__incl.dot  annotated.tex  block_8cpp.tex  block_8cpp__incl.dot  block_8h.tex  block_8h__dep__incl.dot  block_8h__incl.dot  blockcomposer_8cpp.tex  blockcomposer_8cpp__incl.dot  blockcomposer_8h.tex  blockcomposer_8h__dep__incl.dot  blockcomposer_8h__incl.dot  blockdto_8cpp.tex  blockdto_8cpp__incl.dot  blockdto_8h.tex  blockdto_8h__dep__incl.dot  blockdto_8h__incl.dot  classBlock.tex  classBlockComposer.tex  classBlockComposer__coll__graph.dot  classBlockDto.tex  classBlockDto__coll__graph.dot  classBlock__inherit__graph.dot  classDtoMap.tex  classGameEntity.tex  classGameEntity__coll__graph.dot  classGameEntity__inherit__graph.dot  classGraphicsItemComposer.tex  classGraphicsItemComposer__coll__graph.dot  classGraphicsItemComposer__inherit__graph.dot  classJsonFileAccessor.tex  classMainWindow.tex  classPausableEntity.tex  classPausableEntity__inherit__graph.dot  classPropertyView.tex  (+98 more)
examples/: example1.json  example2.json  example3.json
src/: .gitignore  CMakeLists.txt  DtoMap.h  Serializable.h  blockcomposer.h  dconfig  gameentity.cpp  gameentity.h  graphicsitemcomposer.h  jsonfileaccessor.h  mainwindow.h  mainwindow.ui  pausableentity.h  propertyview.cpp  propertyview.h  resizablegraphicsview.cpp  resizablegraphicsview.h  robotcomposer.cpp  robotcomposer.h  room.cpp  signalsender.h  updateentity.h
